k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    app: luisops-dashboard
    purpose: portfolio
