k8s/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luisops-frontend
  namespace: dashboard
  labels:
    app.kubernetes.io/name: luisops-frontend
    app.kubernetes.io/part-of: luisops-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luisops-frontend
  template:
    metadata:
      labels:
        app: luisops-frontend
        app.kubernetes.io/name: luisops-frontend
        app.kubernetes.io/part-of: luisops-dashboard
    spec:
      containers:
        - name: frontend
          image: ghcr.io/luisrodvilladaorg/app-luisops-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
